Added view and controller for displaying a list of rooms

--- a/lib/learn_phoenix_web/templates/page/index.html.eex
+++ b/lib/learn_phoenix_web/templates/page/index.html.eex
@@ -1,6 +1,6 @@
 <div class="jumbotron">
-  <h2><%= gettext "Welcome %{name}!", name: "Ian" %></h2>
-  <p class="lead">If you see this Andy<br />That means it is working</p>
+  <h2><%= gettext "Thanks %{name}!", name: "Ian" %></h2>
+  <p class="lead">Yes I saw it</p>
 </div>
 
 <div class="row marketing">
